[gd_scene load_steps=2 format=3 uid="uid://c0mui01tvaame"]

[ext_resource type="Script" path="res://menu/lobby.gd" id="1_k78bo"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k78bo")
metadata/_edit_lock_ = true

[node name="IPDialog" type="ConfirmationDialog" parent="."]
title = "Введи IP-адрес сервера"
position = Vector2i(649, 302)
size = Vector2i(389, 104)
ok_button_text = "Подключиться"
dialog_hide_on_ok = false
cancel_button_text = "Отмена"

[node name="LineEdit" type="LineEdit" parent="IPDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 381.0
offset_bottom = 39.0
placeholder_text = "XXX.XXX.XXX.XXX"
alignment = 1
max_length = 19

[node name="Base" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Centering" type="CenterContainer" parent="Base"]
layout_mode = 2

[node name="Main" type="VBoxContainer" parent="Base/Centering"]
layout_mode = 2

[node name="Title" type="Label" parent="Base/Centering/Main"]
layout_mode = 2
size_flags_horizontal = 4
text = "2Д-шутер"

[node name="Name" type="HBoxContainer" parent="Base/Centering/Main"]
layout_mode = 2

[node name="Label" type="Label" parent="Base/Centering/Main/Name"]
layout_mode = 2
text = "Твоё имя:"

[node name="LineEdit" type="LineEdit" parent="Base/Centering/Main/Name"]
layout_mode = 2
size_flags_horizontal = 3
max_length = 32
expand_to_text_length = true

[node name="Buttons" type="HBoxContainer" parent="Base/Centering/Main"]
layout_mode = 2

[node name="Create" type="Button" parent="Base/Centering/Main/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Создать сервер"

[node name="Join" type="Button" parent="Base/Centering/Main/Buttons"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Присоединиться..."

[node name="Lobby" type="VBoxContainer" parent="Base/Centering"]
auto_translate_mode = 1
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="Base/Centering/Lobby"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Игроки в лобби:"

[node name="Panel" type="PanelContainer" parent="Base/Centering/Lobby"]
auto_translate_mode = 1
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="Players" type="VBoxContainer" parent="Base/Centering/Lobby/Panel"]
auto_translate_mode = 1
layout_mode = 2

[node name="Ready" type="Button" parent="Base/Centering/Lobby"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "Готово!"

[connection signal="confirmed" from="IPDialog" to="." method="_on_ip_dialog_confirmed"]
[connection signal="text_changed" from="IPDialog/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Base/Centering/Main/Buttons/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Base/Centering/Main/Buttons/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Base/Centering/Lobby/Ready" to="." method="_on_create_pressed"]
